# claw-cgp

./: .gitignore  CMakeLists.txt  README.md  build_proto.bat  build_proto.rb  make.sh
app/common/net/: codec_reflect.go  codec_test.go  net.go
app/common/proto/: client_logic.pb.go
app/controllers/: hall.go  room.go
app/logic/: logic.go
app/logic/door/: door.go
app/logic/hall/: hall.go  room_config.go
app/logic/player/: handle.go  player.go
app/logic/room/: room.go  room_manager.go  room_manager_test.go
app/logic/user/: user.go
app/views/room/: default.html
app/views/table/: default.html
client/: client.go  client.py  ui.go
client/player/: handle.go  player.go
common/net/: codec.go  codec_reflect.go  net.go
common/proto/: client_logic.pb.go
config/: common.json
generate_proto/: buid.sh  client_logic.proto
logic/: logic.go
logic/chat/: chatroom.go
logic/config/: room.xml
logic/door/: door.go
logic/net/: codec.go  codec_reflect.go  codec_test.go  net.go  net_test.go
logic/player/: handle.go  player.go
logic/proto/: codec.go  proto.go
logic/room/: room.go  room_manager.go  room_manager_test.go
logic/user/: user.go  user_manager.go
protocol_definition/: cmd.proto
public/: proto
public/js/hall/: hall.js
src/: CMakeLists.txt
src/claw/: CMakeLists.txt
src/claw/cgp/: CMakeLists.txt
src/claw/cgp/client/: CMakeLists.txt
src/claw/cgp/common/: config.cpp  config.h
src/claw/cgp/common/proto/: cmd.pb.cc  cmd.pb.h
src/claw/cgp/hall/: CMakeLists.txt  hall.cpp
src/claw/cgp/login/: CMakeLists.txt  login.cpp  login.h  thread.cpp  thread.h
test/: CMakeLists.txt  all_test.cpp
test/dep/lib/: gtestd.lib
tool/dep/: base.rb
web/app/controllers/: hall.go
web/app/views/: header.html
web/app/views/App/: Index.html
web/app/views/Hall/: Hall.html
web/conf/: app.conf
web/public/js/hall/: chat.js  hall.js  test.js
